# Dev2022

./: CMakeLists.txt  MarkDown.md  Pic.qrc  README.md  Test_en_US.ts  build.sh
Inc/: common.h  mainwindow.h  operatewindow.h  ui_operatewindow.h
QT_Build/: CMakeCache.txt  CMakeCache.txt.prev  Makefile  cmake_install.cmake
QT_Build/.cmake/api/v1/reply/: cache-v2-e6c0205d812d821fc0c8.json  cmakeFiles-v1-33e0c1e8ff775f299648.json  codemodel-v2-3a00203347c417c83d78.json  index-2022-04-21T07-33-45-0274.json  target-Test-Debug-f6e583e4fd10782e8685.json  target-Test_autogen-Debug-109af89a578ab574f9a5.json
QT_Build/.cmake/api/v1/reply.prev/: cache-v2-5696f2d974dbd806fd32.json  cmakeFiles-v1-2bc963a5ad158a197ce3.json  codemodel-v2-59e9d9565c04065be373.json  index-2022-04-14T06-43-29-0195.json  target-Test-Debug-b137445fd3441df989e6.json  target-Test_autogen-Debug-367d84ebcc70b1b853f7.json
QT_Build/Test_autogen/: moc_predefs.h
QT_Build/Test_autogen/C2K46SIDN7/: moc_operatewindow.cpp
QT_Build/Test_autogen/EWIEGA46WW/: qrc_Pic.cpp
QT_Build/Test_autogen/include/: ui_operatewindow.h
Release/: Makefile  Test  cmake_install.cmake
Release/.cmake/api/v1/reply/: cache-v2-c02b0b1e157787698c42.json  cmakeFiles-v1-797ed7bec28972335783.json  codemodel-v2-b45fb58d7387c2fa1648.json  index-2022-09-09T03-08-00-0106.json  target-Test-Release-20b301f1f30cfa539889.json  target-Test_autogen-Release-65b562e2e029da277dc7.json
Release/Test_autogen/: mocs_compilation.cpp
Release/Test_autogen/C2K46SIDN7/: moc_operatewindow.cpp
Release/Test_autogen/EWIEGA46WW/: qrc_Pic.cpp
Release/Test_autogen/XECY6LLWZE/: moc_xlsxdocument.cpp
Release/Test_autogen/include/: ui_mainwindow.h  ui_operatewindow.h
Src/: common.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  operatewindow.cpp  operatewindow.ui
